@@ -6,6 +6,9 @@ class Net::SSLeay::X509_STORE_CTX {
   use Net::SSLeay::Error;
   use Net::SSLeay::X509;
   
+  # Class Methods
+  native method get1_issuer : int ($issuer_ref : Net::SSLeay::X509, $ctx : Net::SSLeay::X509_STORE_CTX, $x : Net::SSLeay::X509);
+  
   # Instance Methods
   native method set_error : void ($s : int);
   
