@@ -5,6 +5,7 @@
     * Add Net::SSLeay::OCSP_SINGLERESP#DESTROY method.
     * Add Net::SSLeay::OCSP#resp_get0 method.
     * Add Net::SSLeay::OCSP#response_get1_basic method.
+    * Add Net::SSLeay::X509_STORE_CTX#get1_issuer method.
 0.013 2024-11-14
   [New Features]
     * Add Net::SSLeay::OCSP#response_status_str method.
